--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,8 @@
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/codingblocks-online.css">
-    <link rel="stylesheet" href="{{rootURL}}public/fonts/Effra_Std_Rg.ttf">
+    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 
     {{content-for "head-footer"}}
   </head>
