load OneSignalSDK synchronously

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 	<link rel="manifest" href="/manifest.json" />
 
-	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js"></script>
 	<script>
 	  var OneSignal = window.OneSignal || [];
 	  OneSignal.push(function() {
