--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="msvalidate.01" content="FAD3370B879C516ED95DC8FDCCB3537C" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CodingblocksOnline</title>
     <meta name="description" content="">
