Added favicon on the tab

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,9 @@
     <title>CodingblocksOnline</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="/images/favicon-16x16.png"  sizes="16x16">
+    <link rel="icon" href="/images/favicon-32x32.png"  sizes="32x32">
+    <link rel="icon" href="/images/favicon-96x96.png" sizes="96x96">
 
     {{content-for "head"}}
 
@@ -26,7 +29,7 @@
 		});
 	  });
 	</script>
-    
+
     {{content-for "head-footer"}}
   </head>
   <body>
