--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,7 @@
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/codingblocks-online.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <script src="https://embed.small.chat/T54NF3W77G56JR5UVD.js" async></script>
     {{content-for "body-footer"}}
   </body>
 </html>
