added titlefor all pages

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="msvalidate.01" content="FAD3370B879C516ED95DC8FDCCB3537C" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CodingblocksOnline</title>
+    <title>CodingBlocks Online</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/images/favicon-16x16.png"  sizes="16x16">
