--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,8 @@
         return check;
       };
       if(mobilecheck() === true ) {
-        document.write("\<script type=\"text/javascript\" async=\"\" src=\"//code.jivosite.com/script/widget/mm3xh9v8wk\"\>\</script\>");
+        var url = "https://code.jivosite.com/script/widget/mm3xh9v8wk";
+        $.getScript(url);
       }
     </script>
   </body>
