made suggested changes

--- a/app/index.html
+++ b/app/index.html
@@ -47,10 +47,12 @@
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     {{content-for "body-footer"}}
     <script>
-      if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-        var url = "https://code.jivosite.com/script/widget/mm3xh9v8wk";
-        $.getScript(url);
-      }
+      $(document).ready(function () {
+        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+          var url = "https://code.jivosite.com/script/widget/ASYGLZQ6UC";
+          $.getScript(url);
+        }
+      });
     </script>
   </body>
 </html>
