--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,10 @@
         return check;
       };
       if(checkIfMob() === true ) {
-        document.write("\<script type=\"text/javascript\" async=\"\" src=\"//code.jivosite.com/script/widget/mm3xh9v8wk\"\>\</script\>");
+        <!-- BEGIN JIVOSITE CODE {literal} -->
+        (function(){ var widget_id = 'ASYGLZQ6UC';var d=document;var w=window;function l(){
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = '//code.jivosite.com/script/widget/'+widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+        <!-- {/literal} END JIVOSITE CODE -->
       }
     </script>
   </body>
