--- a/app/index.html
+++ b/app/index.html
@@ -46,5 +46,13 @@
     <script src="{{rootURL}}assets/codingblocks-online.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     {{content-for "body-footer"}}
+    <script>
+      $(document).ready(function () {
+        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+          var url = "https://code.jivosite.com/script/widget/ASYGLZQ6UC";
+          $.getScript(url);
+        }
+      });
+    </script>
   </body>
 </html>
