--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,14 @@
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/codingblocks-online.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <script>
+      $(document).ready(function () {
+        if ($(window).width() < 480) {
+          var url = "https://code.jivosite.com/script/widget/ASYGLZQ6UC";
+          $.getScript(url);
+        }
+      });
+    </script>
     {{content-for "body-footer"}}
   </body>
 </html>
