--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script>
       $(document).ready(function () {
-        if ($(window).width() < 480) {
+        if ($(window).width() > 780) {
           (function () {
             var widget_id = 'ASYGLZQ6UC'; var d = document; var w = window; function l() {
               var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = '//code.jivosite.com/script/widget/' + widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);
