--- a/app/index.html
+++ b/app/index.html
@@ -16,26 +16,36 @@
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/codingblocks-online.css">
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-	<link rel="manifest" href="/manifest.json" />
+  	<link rel="manifest" href="/manifest.json" />
+    <!-- Begin Inspectlet Asynchronous Code -->
+    <script type="text/javascript">
+    (function() {
+    window.__insp = window.__insp || [];
+    __insp.push(['wid', 1725807676]);
+    var ldinsp = function(){
+    if(typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js?wid=1725807676&r=' + Math.floor(new Date().getTime()/3600000); var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
+    setTimeout(ldinsp, 0);
+    })();
+    </script>
+    <!-- End Inspectlet Asynchronous Code -->
+  	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
+  	<script>
+  	  var OneSignal = window.OneSignal || [];
+  	  OneSignal.push(function() {
+  		OneSignal.init({
+            allowLocalhostAsSecureOrigin: true,
+  		  appId: "01d75aac-5123-4145-b655-ba8d27c5dc13",
+  		});
+  	  });
+  	</script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
-	<script>
-	  var OneSignal = window.OneSignal || [];
-	  OneSignal.push(function() {
-		OneSignal.init({
-          allowLocalhostAsSecureOrigin: true,
-		  appId: "01d75aac-5123-4145-b655-ba8d27c5dc13",
-		});
-	  });
-	</script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-83327907-12', 'auto');
-  </script>
+      ga('create', 'UA-83327907-12', 'auto');
+    </script>
 
 
     {{content-for "head-footer"}}
