--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,15 @@
     })();
     </script>
     <!-- End Inspectlet Asynchronous Code -->
+    <!-- DO NOT MODIFY -->
+    <!-- Quora Pixel Code (JS Helper) -->
+    <script>
+    !function(q,e,v,n,t,s){if(q.qp) return; n=q.qp=function(){n.qp?n.qp.apply(n,arguments):n.queue.push(arguments);}; n.queue=[];t=document.createElement(e);t.async=!0;t.src=v; s=document.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t,s);}(window, 'script', 'https://a.quora.com/qevents.js');
+    qp('init', '0e6543f4ed0047658c67c5d04a8ace8d');
+    qp('track', 'ViewContent');
+    </script>
+    <noscript><img height="1" width="1" style="display:none" src="https://q.quora.com/_/ad/0e6543f4ed0047658c67c5d04a8ace8d/pixel?tag=ViewContent&noscript=1"/></noscript>
+    <!-- End of Quora Pixel Code -->
   	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
   	<script>
   	  var OneSignal = window.OneSignal || [];
