--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/codingblocks-online.css">
-    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin:500,600" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
   	<link rel="manifest" href="/manifest.json" />
     <!-- Begin Inspectlet Asynchronous Code -->
