--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
   		  appId: "01d75aac-5123-4145-b655-ba8d27c5dc13",
   		});
   	  });
-  	</script>
+    </script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -56,6 +56,7 @@
 
       ga('create', 'UA-83327907-12', 'auto');
     </script>
+    <script src="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js"></script>
 
 
     {{content-for "head-footer"}}
