--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
 
       ga('create', 'UA-83327907-12', 'auto');
     </script>
+    <link rel="preload" href="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js" as="script">
     <script src="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js"></script>
 
 
