add new tag manager

--- a/app/index.html
+++ b/app/index.html
@@ -61,8 +61,20 @@
 
       ga('create', 'UA-83327907-12', 'auto');
     </script>
+
+    <!-- Global site tag (gtag.js) - Google Ads: 858471704 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-858471704"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-858471704');
+</script>
+
     <link rel="preload" href="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js" as="script">
     <script src="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js"></script>
+
 
 
     {{content-for "head-footer"}}
