--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="msvalidate.01" content="FAD3370B879C516ED95DC8FDCCB3537C" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="alternate" href="https://online.codingblocks.com/" hreflang="en"/> 
     <link rel="icon" href="/images/favicon-16x16.png"  sizes="16x16">
     <link rel="icon" href="/images/favicon-32x32.png"  sizes="32x32">
     <link rel="icon" href="/images/favicon-96x96.png" sizes="96x96">
