update google tag manager

--- a/app/index.html
+++ b/app/index.html
@@ -91,7 +91,7 @@
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-5MFWRX5');</script>
+    })(window,document,'script','dataLayer','GTM-TWLQ78S');</script>
     <!-- End Google Tag Manager -->
 
   </head>
@@ -121,6 +121,14 @@
       ;k=t.Promise;t.Talk={v:1,ready:{then:function(f){if(k)return new k(function(r,e){l.push([f,r,e])});l
       .push([f])},catch:function(){return k&&new k()},c:l}};})(window,document,[]);
     </script>
+
+    <!-- Google Tag Manager (noscript) -->
+      <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TWLQ78S" 
+          height="0" width="0" style="display:none;visibility:hidden">
+        </iframe>
+      </noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     {{content-for "body-footer"}}
   </body>
