--- a/app/index.html
+++ b/app/index.html
@@ -102,17 +102,7 @@
     <script src="{{rootURL}}assets/codingblocks-online.js"></script>
 
     <!-- JIVO CHAT -->
-    <script>
-      $(document).ready(function () {
-        if ($(window).width() > 780) {
-          (function () {
-            var widget_id = 'ASYGLZQ6UC'; var d = document; var w = window; function l() {
-              var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = '//code.jivosite.com/script/widget/' + widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);
-            } if (d.readyState == 'complete') { l(); } else { if (w.attachEvent) { w.attachEvent('onload', l); } else { w.addEventListener('load', l, false); } }
-          })();
-        }
-      });
-    </script>
+    <script src="//code.jivosite.com/widget.js" data-jv-id="ASYGLZQ6UC" async></script>
 
     <!-- TALKJS -->
     <script>
