--- a/app/index.html
+++ b/app/index.html
@@ -95,7 +95,7 @@
     <!-- End Google Tag Manager -->
 
   </head>
-  <body>
+  <body class="a-hb pb-0">
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
