--- a/app/index.html
+++ b/app/index.html
@@ -112,6 +112,8 @@
       .push([f])},catch:function(){return k&&new k()},c:l}};})(window,document,[]);
     </script>
 
+    <script src="https://hack.codingblocks.com/index.js"></script>
+
     {{content-for "body-footer"}}
   </body>
 </html>
