--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,17 @@
   		  appId: "01d75aac-5123-4145-b655-ba8d27c5dc13",
   		});
   	  });
-  	</script>
+    </script>
+    
+    <!--  GA Code -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-83327907-12', 'auto');
+    </script>
 
 
     <link rel="preload" href="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js" as="script">
