--- a/app/index.html
+++ b/app/index.html
@@ -51,22 +51,18 @@
   		});
   	  });
     </script>
-    
-    <!--  GA Code -->
+
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-83327907-12"></script>
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-      ga('create', 'UA-83327907-12', 'auto');
-    </script>
-
-
+      gtag('config', 'UA-83327907-12');
+    </script> -->
+     
     <link rel="preload" href="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js" as="script">
     <script src="https://dev.vdocipher.com/playerAssets/1.6.10/vdo.js"></script>
-
-
 
     {{content-for "head-footer"}}
 
