preload bebas neue

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="/images/favicon-16x16.png"  sizes="16x16">
     <link rel="icon" href="/images/favicon-32x32.png"  sizes="32x32">
     <link rel="icon" href="/images/favicon-96x96.png" sizes="96x96">
+    <link rel="preload" as="font" href="https://minio.codingblocks.com/public/Bebas_Neue.ttf" type="font/ttf" crossorigin="anonymous">
 
     {{content-for "head"}}
 
