fix: cb web component import

--- a/app/index.html
+++ b/app/index.html
@@ -96,7 +96,7 @@
       .push([f])},catch:function(){return k&&new k()},c:l}};})(window,document,[]);
     </script>
 
-    <script src="https://hack.codingblocks.com/index.js"></script>
+    <script src="https://unpkg.com/@coding-blocks/web-components@0.0.9/dist/index.js" async></script>
 
     {{content-for "body-footer"}}
   </body>
